samples/_failures_safe/1761305575_37e6fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f0023649.c: In function ‘main’:
./samples/SAFE/__tmp_f0023649.c:134:17: error: expected expression at end of input
  134 |                 print_matrix(&
      |                 ^~~~~~~~~~~~
./samples/SAFE/__tmp_f0023649.c:134:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f0023649.c:134:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f0023649.c:134:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f0023649.c:134:17: error: expected declaration or statement at end of input
